Use overflow:clip to prevent accessibility tools from scrolling popup notifications (to show the decorative background element)

--- a/packages/app-desktop/gui/styles/popup-notification-item.scss
+++ b/packages/app-desktop/gui/styles/popup-notification-item.scss
@@ -34,7 +34,7 @@
 	padding: 17px 15px;
 	border-radius: 4px;
 
-	overflow: hidden;
+	overflow: clip;
 	position: relative;
 	display: flex;
 	align-items: center;
